fixed wrap

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ app {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
  background: rgb(186,255,240);
